syntax = "proto3";

package bookstore;

option java_multiple_files = true;
option java_package = "com.example.grpc.bookstore";
option java_outer_classname = "BookstoreProto";

import "google/protobuf/wrappers.proto";

message BookRequestDto {
  string title = 1;
  string author = 2;
  string isbn = 3;
  float price = 4;
  int32 quantity = 5;
}

message BookDto {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  float price = 5;
  int32 quantity = 6;
}

message UpdateBookRequestDto {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  float price = 5;
  int32 quantity = 6;
}

message Empty {}

message BookById {
  string id = 1;
}

service BookstoreService {
  rpc GetAllBooks(Empty) returns (BookList);
  rpc GetBookById(BookById) returns (BookDto);
  rpc AddBook(BookRequestDto) returns (BookDto);
  rpc UpdateBook(UpdateBookRequestDto) returns (BookDto);
  rpc DeleteBook(BookById) returns (Empty);
}

message BookList {
  repeated BookDto books = 1;
}